v1.9.9 -Lag Notifier